--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@ html{
 header{
     background-color: #6B705C;
     width: 100%;
-    margin: 0;
 }
 
 li{
@@ -61,6 +60,7 @@ a.skip{
 
 .nav-branding{
     font-size: 2rem;
+    font-family: "Bad Script", cursive;
 }
 
 .nav-link{
