--- a/css/style.css
+++ b/css/style.css
@@ -202,9 +202,9 @@ p{
     display: block;
     width: auto;
     height: 900px;
-    border: solid 3px #6B705C;
+    border: solid 3px #CB997E;
     padding: 20px;
-    background-color: #A5A58D;
+    background-color: #DDBEA9;
     margin: 10px;
     overflow: auto;
 }
@@ -320,6 +320,7 @@ p{
     border-radius: 10px;
     padding: 20px;
     margin: 20px;
+    border: solid 3px #CB997E;
 }
 
 .gallery img{
@@ -332,6 +333,7 @@ figcaption{
     text-align: center;
     font-size: 20px;
     padding-top: 5px;
+    padding-bottom: 10px;
 }
 
 .controls{
@@ -352,10 +354,39 @@ figcaption{
     border-radius: 10px;
     font-family: 'Times New Roman', Times, serif;
 }
+/*
+.myList textarea{
+    grid-column: 1;
+    grid-row: 3;
+    width: 300px;
+    height: 300px;
+}
+
+.myList button{
+    /* grid-column: 1;
+    grid-row: 4; */
+    /* background-color: #6B705C;
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 20px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 10px;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+.myList{
+    display: block;
+} */
 
 #myBtn {
     display: none;
-  }
+}
+
 
 /* Tablet view */
 
@@ -410,15 +441,19 @@ figcaption{
         grid-column: 1/ span 2;
         grid-row: 3;
     }
+    .about-me-img{
+        grid-column: 1/ span 2;
+        grid-row: 4
+    }
 
     .favorite-books{
         grid-column: 1/ span 1;
-        grid-row: 4;
+        grid-row: 5;
     }
 
     .favorite-things{
         grid-column: 2/ span 3;
-        grid-row: 5;
+        grid-row: 6;
     }
 
     .home-links{
