--- a/css/style.css
+++ b/css/style.css
@@ -207,6 +207,7 @@ p{
     background-color: #DDBEA9;
     margin: 10px;
     overflow: auto;
+    box-shadow: 20px 20px 50px grey;
 }
 
 .book p{
@@ -240,9 +241,6 @@ p{
     padding: 20px;
 }
 
-.about-me h2{
-    text-shadow: none;
-}
 
 .about-me p{
     background-color: transparent;
@@ -321,6 +319,7 @@ p{
     padding: 20px;
     margin: 20px;
     border: solid 3px #CB997E;
+    box-shadow: 20px 20px 50px grey;
 }
 
 .gallery img{
@@ -354,56 +353,28 @@ figcaption{
     border-radius: 10px;
     font-family: 'Times New Roman', Times, serif;
 }
-/*
-.myList textarea{
-    grid-column: 1;
-    grid-row: 3;
-    width: 300px;
-    height: 300px;
-}
 
-.myList button{
-    /* grid-column: 1;
-    grid-row: 4; */
-    /* background-color: #6B705C;
-    border: none;
+#myBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    outline: none;
+    background-color: #6B705C ;
     color: white;
-    padding: 10px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 20px;
-    margin: 4px 2px;
     cursor: pointer;
+    padding: 15px;
     border-radius: 10px;
+    font-size: 18px;
     font-family: 'Times New Roman', Times, serif;
-}
+    }
 
-.myList{
-    display: block;
-} */
-
-    #myBtn {
-        display: none;
-        position: fixed;
-        bottom: 20px;
-        right: 30px;
-        z-index: 99;
-        outline: none;
-        background-color: #6B705C ;
-        color: white;
-        cursor: pointer;
-        padding: 15px;
-        border-radius: 10px;
-        font-size: 18px;
-        font-family: 'Times New Roman', Times, serif;
-      }
-
-     #myBtn:hover {
-        text-decoration: underline;
-        background-color: #6B705C ;
-        color: white;
-      }
+    #myBtn:hover {
+    text-decoration: underline;
+    background-color: #6B705C ;
+    color: white;
+    }
 
 /* Tablet view */
 
@@ -423,6 +394,15 @@ figcaption{
 
     .rec-container{
         grid-template-columns: 1fr 1fr;
+    }
+
+    a.nav-link{
+        font-size: 20px;
+    }
+
+    .nav-branding{
+        font-size: 1.5rem;
+        font-family: "Bad Script", cursive;
     }
 
     h1{
@@ -475,6 +455,15 @@ figcaption{
         grid-gap: 20px;
     }
 
+    a.nav-link{
+        font-size: 30px;
+    }
+
+    .nav-branding{
+        font-size: 2rem;
+        font-family: "Bad Script", cursive;
+    }
+
     h1{
         grid-column: 2;
     }
@@ -490,7 +479,7 @@ figcaption{
     }
 
     .about-me-img{
-        grid-column: 2/ span 2;
+        grid-column: 3;
         grid-row: 4
     }
 
